[WIP] One step further.

--- a/site_servisann-ru/index.html
+++ b/site_servisann-ru/index.html
@@ -6,6 +6,7 @@
 		<title>Мастер На Час - Марат (СПб)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- Here should go tag cloud-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
@@ -16,12 +17,13 @@
 				<ul class="container">
 					<li><a href="#top">Наверх</a></li>
 					<li><a href="#work">Мои Услуги</a></li>
-					<li><a href="#portfolio">Выполненные Работы</a></li>
-					<li><a href="#contact">Контакты</a></li>
+					<li><a href="#differences">Мои Преимущества</a></li>
+					<li><a href="#portfolio">Мои Фото / Работы</a></li>
+					<li><a href="#contact">Мои Контакты</a></li>
 				</ul>
 			</nav>
 
-		<!-- Home -->
+		<!-- Home / Наверх (Домой) -->
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
@@ -32,19 +34,10 @@
 							<header>
 								<h1>Привет. Я - <strong>Марат</strong>.</h1>
 							</header>
-
-							<!--
 							<p>
-								And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed
-								by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released
-								under the <a href="http://html5up.net/license">CCA license</a>.
-							</p>
-							-->
-
-							<p>
-								Более 10 лет я работаю электриком как индивидуальный предприниматель и профессионально занимаюсь электромонтажом
-								разной степени сложности. За моими плечами опыт работы в таких организациях как "Россети", "Росавтодор", "Газпром".
-								В моем портфолио - <strong>более 50 выполненных задач</strong> по электромонтажным работам и множество довольных клиентов!
+								Более <strong>10 лет я профессионально занимаюсь электромонтажом</strong> разной степени сложности. За моими плечами опыт
+								работы в таких организациях как "Россети", "Росавтодор", "Газпром". В моем портфолио - <strong>более 50
+								выполненных задач</strong> по электромонтажным работам и множество довольных клиентов!
 							</p>
 
 							<a href="#work" class="button large scrolly">Какие услуги я предоставляю?</a>
@@ -57,35 +50,75 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Я предоставляю следующие услуги:</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Мои услуги</h2>
+						<p>Если Вы не увидели в данном списке той услуги, что необходима Вам - свяжитесь со мной!</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon solid featured fa-charging-station"></span>&nbsp;
+								<h3>Электромонтаж</h3>
+								<p>Электромонтажные и сопутствующие работы разного уровня сложности. Индивидуальный подход.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-business-time"></span>
+								<h3>Подключение бытовой техники</h3>
+								<p>Подключение электроплит, духовых шкафов, варочных поверхностей, бойлеров, водонагревателей, конвекторов, стиральных и
+									посудомоечных машин и многое другое. Любая техника на Ваш выбор.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Установка и замена электросчетчиков</h3>
+								<p>???</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Консультации по вопросам домашней электрики и электромонтажа</h3>
+								<p>Консультации / помощь с решением любых вопросов, связанных с домашними электросетями и электроприборами.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-bolt"></span>
+								<h3>Проектирование домашних электросетей</h3>
+								<p>Проектирование электросетей "под ключ" для любых нужд. Реализация выполненного проекта или передача Вашим подрядчикам.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-bolt"></span>
+								<h3>Алмазное штробление и резка</h3>
+								<p>Алмазное беспылевое штробление стен для прокладки кабеля, резка ниш для электрощитов, беспылевое сверление отверстий для
+									подрозетников, сверление проходных отверстий в стенах для кабелей.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>вввввв</p>
 						<a href="#portfolio" class="button large scrolly">Взгляните на примеры моих работ</a>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Differences / Преимущества -->
+			<article id="differences" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Мои Преимущества</h2>
+						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+					</header>
+					<div class="row">
+						<p>Some text goes here...</p>
+					</div>
+					<footer>
+						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<a href="#contact" class="button large scrolly">Свяжитесь со мной</a>
 					</footer>
 				</div>
 			</article>
