Added new content and fixed / updated index.html file.

--- a/site_servisann-ru/index.html
+++ b/site_servisann-ru/index.html
@@ -6,19 +6,19 @@
 		<title>Мастер На Час - Марат (СПб)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Here should go tag cloud-->
+		<!-- Here should go tags cloud -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
 	<body class="is-preload">
 
-		<!-- Nav -->
+		<!-- Nav / Навигация -->
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Наверх</a></li>
 					<li><a href="#work">Мои Услуги</a></li>
 					<li><a href="#differences">Мои Преимущества</a></li>
-					<li><a href="#portfolio">Мои Фото / Работы</a></li>
+					<li><a href="#portfolio">Фотогалерея</a></li>
 					<li><a href="#contact">Мои Контакты</a></li>
 				</ul>
 			</nav>
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/marat_foto2.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/marat_main_photo.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -57,8 +57,10 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-charging-station"></span>&nbsp;
-								<h3>Электромонтаж</h3>
-								<p>Электромонтажные и сопутствующие работы разного уровня сложности. Индивидуальный подход.</p>
+								<h3>Электромонтаж и электромонтажные работы</h3>
+								<p>Электромонтажные и сопутствующие работы разного уровня сложности. Монтаж кабеля (в стенах и на потолке, в гофротрубе
+									и кабель-канале). Монтаж и коммутация распаечных (распределительных) коробок. Замена подрозетников. Поиск обрывов
+									и коротких замыканий в электропроводке. Определение расположения кабелей в стене. Индивидуальный подход.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -66,28 +68,32 @@
 								<span class="icon solid featured fa-business-time"></span>
 								<h3>Подключение бытовой техники</h3>
 								<p>Подключение электроплит, духовых шкафов, варочных поверхностей, бойлеров, водонагревателей, конвекторов, стиральных и
-									посудомоечных машин и многое другое. Любая техника на Ваш выбор.</p>
+									посудомоечных машин и многое другое. Любая техника на Ваш выбор. Установка / укрепление розеток, выключателей, переключателей,
+									диммеров, люстр, бра и т.д.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Установка и замена электросчетчиков</h3>
-								<p>???</p>
+								<p>Работы по согласованию с ПЭС и по отраслевым стандартам. Помощь с опломбированием и поверкой
+									эелектросчетчиков. Сборка и монтаж щитов учета и распределения.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Консультации по вопросам домашней электрики и электромонтажа</h3>
-								<p>Консультации / помощь с решением любых вопросов, связанных с домашними электросетями и электроприборами.</p>
+								<p>Консультации / помощь с решением любых вопросов, связанных с домашними электросетями и электроприборами.
+									Составление смет и проектов работ. Закупка и организация доставки необходимых материалов.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-bolt"></span>
-								<h3>Проектирование домашних электросетей</h3>
-								<p>Проектирование электросетей "под ключ" для любых нужд. Реализация выполненного проекта или передача Вашим подрядчикам.</p>
+								<h3>Проектирование и реализация домашних электросетей</h3>
+								<p>Проектирование электросетей "под ключ" для любых нужд. Реализация выполненного проекта или передача Вашим
+									подрядчикам. Сопровождение работ / шеф-надзор.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -100,8 +106,8 @@
 						</div>
 					</div>
 					<footer>
-						<p>вввввв</p>
-						<a href="#portfolio" class="button large scrolly">Взгляните на примеры моих работ</a>
+						<p>Список моих услуг этим не ограничивается - свяжитесь со мной и мы обязательно с Вами договоримся!</p>
+						<a href="#differences" class="button large scrolly">В чем преимущества работы со мной?</a>
 					</footer>
 				</div>
 			</article>
@@ -111,71 +117,126 @@
 				<div class="container">
 					<header>
 						<h2>Мои Преимущества</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>Вот лишь некоторые из преимуществ работы со мной</p>
 					</header>
-					<div class="row">
-						<p>Some text goes here...</p>
+					<div class="row aln-center">
+						<div class="col-8-xlarge">
+							<ul>
+								<li>официальная работа по <strong>договору подряда</strong></li>
+								<li>официальная гарантия на производимые работы - <strong>3 года!</strong></li>
+								<li>выполнение работ <strong>"под ключ"</strong> - от проектирования до реализации</li>
+								<li><strong>закупки и доставка материалов</strong> - наша проблема, прозрачная отчетность</li>
+								<li>работа только с <strong>проверенными контрагентами</strong> - сантехники, разнорабочие и т.п.</li>
+								<li><strong>поэтапность расчетов</strong> с приемкой заказчиком каждого этапа работ</li>
+								<li>все работы выполняются <strong>согласно ГОСТам, ПУЭ, СНиПам</strong></li>
+								<li><strong>контрольльные замеры</strong> ключевых показателей по окончании работ (сопротивления изоляции и петли "фаза-нуль" и т.д.) для подтверждения качества выполненного монтажа.</li>
+								<li>полный набор необходимого <strong>специализированного инструментария</strong></li>
+								<li>использование технологии <strong>прямого монтажа</strong> (без шума и пыли), работаем с промышленным пылесосом</li>
+							</ul>
+						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Свяжитесь со мной</a>
+						<p>Все преимущества Вы можете узнать, <a href="#contact" class="scrolly">связавшись со мной!</a></p>
+						<a href="#portfolio" class="button large scrolly">Загляните в мою фотогалерею</a>
 					</footer>
 				</div>
 			</article>
 
-		<!-- Portfolio / Выполненные работы -->
+		<!-- Portfolio / Фотогалерея -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Мои выполненные работы:</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Фотогалерея</h2>
+						<p>Здесь Вы можете увидеть фото выполненных / выполняемых работ, отзывы и фото рабочего процесса.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
+								<a href="#" class="image featured"><img src="images/mounting2.jpg" alt="" /></a>
+								<h3><a href="#">Электрощит</a></h3>
+								<p>Окончательный монтаж электрощита.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting7.jpg" alt="" /></a>
+								<h3><a href="#">Монтаж кабеля</a></h3>
+								<p>Потолочный монтаж для подвесного потолка.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting10.jpg" alt="" /></a>
+								<h3><a href="#">Незаменимый помощник :)</a></h3>
+								<p>Без него - как без рук!</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting4.jpg" alt="" /></a>
+								<h3><a href="#">Подрозетники</a></h3>
+								<p>Чистовой монтаж подрозетников.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting5.jpg" alt="" /></a>
+								<h3><a href="#">Монтаж и разводка кабеля</a></h3>
+								<p>Еще один пример потолочного монтажа электрокабеля.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting6.jpg" alt="" /></a>
+								<h3><a href="#">Распределительная коробка</a></h3>
+								<p>Потолочный монтаж распределительной коробки.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/mounting3.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
+								<a href="#" class="image featured"><img src="images/mounting8.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
+								<a href="#" class="image featured"><img src="images/mounting9.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
+								<a href="#" class="image featured"><img src="images/mounting1.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
+								<a href="#" class="image featured"><img src="images/feedback1.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/feedback2.jpg" alt="" /></a>
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Надеюсь, Вам интересно?</p>
 						<a href="#contact" class="button large scrolly">Свяжитесь со мной</a>
 					</footer>
 				</div>
