Final step for the site. Work is still in progress.

--- a/site_servisann-ru/index.html
+++ b/site_servisann-ru/index.html
@@ -195,48 +195,48 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/mounting3.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Монтаж кабеля</a></h3>
+								<p>Пример потолочного монтажа электрокабеля.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/mounting8.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Мой инструмент</a></h3>
+								<p>Набор профессионального инструмента.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/mounting9.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Чистовой монтаж</a></h3>
+								<p>Чистовой монтаж подрозетников.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/mounting1.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Подрозетники</a></h3>
+								<p>Пример монтажа подрозетников.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/feedback1.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Один из отзывов</a></h3>
+								<p>Приятно получать такие отзывы.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/feedback2.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Еще немного отзывов</a></h3>
+								<p>Когда делаешь профессионально - результат налицо :)</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Надеюсь, Вам интересно?</p>
+						<p>Надеюсь, Вам интересно? Уверен, что смогу помочь и Вам!</p>
 						<a href="#contact" class="button large scrolly">Свяжитесь со мной</a>
 					</footer>
 				</div>
@@ -247,8 +247,25 @@
 				<div class="container medium">
 					<header>
 						<h2>Просто свяжитесь со мной и я Вам помогу!</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<p>Связаться со мной можно по-разному:</p>
 					</header>
+
+					<div class="row aln-center">
+
+						<div class="col-8-xlarge">
+							<ul>
+								<li>телефон: +7 (981) 160-46-62<br>на этом номере Вы найдете мессенджеры: WhatsApp, Viber, Telegram
+									<br>Прошу Вас звонить с 9:00 до 21:00. Спасибо!</li>
+								<li>мой емайл адрес: <a href="mailto:nurgaliev297@gmail.com">nurgaliev297@gmail.com</a></li>
+							</ul>
+						</div>
+
+						<div class="col-8-xlarge">
+							<em>Обратите внимание!</em><br>Информация на сайте носит исключительно информационный характер и не при каких условиях не является публичной
+							офертой указанной в статье 437 Гражданского кодекса РФ.<br>Все права защищены, копирование, цитирование или иное использование материалов сайта
+							без разрешения правообладателя запрещено.
+						</div>
+					<!--
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
@@ -259,11 +276,9 @@
 									<div class="col-6 col-12-small">
 										<input type="text" name="email" id="email" placeholder="Ваш email адрес" />
 									</div>
-									<!--
 									<div class="col-12">
 										<input type="text" name="subject" id="subject" placeholder="Subject" />
 									</div>
-									-->
 									<div class="col-12">
 										<textarea name="message" id="message" placeholder="Ваше сообщение / вопрос / заявка"></textarea>
 									</div>
@@ -276,18 +291,22 @@
 								</div>
 							</form>
 						</div>
+						-->
+
 						<div class="col-12">
 							<hr />
-							<h3>Найдите меня ... </h3>
+							<h3>Найдите меня в соцсетях </h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-vk"><span class="label">ВКонтакте</span></a></li>
+								<li><a href="https://vk.com/servisann/" class="icon brands fa-vk"><span class="label">ВКонтакте</span></a></li>
+								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span class="label">Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								-->
+								<li><a href="https://www.instagram.com/servisann_spb220/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 								<!--
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
