--- a/site_servisann-ru/index.html
+++ b/site_servisann-ru/index.html
@@ -298,14 +298,11 @@
 							<h3>Найдите меня в соцсетях </h3>
 							<ul class="social">
 								<li><a href="https://vk.com/servisann/" class="icon brands fa-vk"><span class="label">ВКонтакте</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCUDzxTDWMnpfo-Yjgf5c94w" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="https://www.instagram.com/servisann_spb220/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span class="label">Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-								-->
-								<li><a href="https://www.instagram.com/servisann_spb220/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-
-								<!--
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
