Minor fixes - upload to server.

--- a/site_dmitriigusev-ru/web-site/index.html
+++ b/site_dmitriigusev-ru/web-site/index.html
@@ -59,7 +59,7 @@
             <!-- Text Logo -->
             <div class="header-titles">
               <a href="#">
-                <h2>AS</h2>
+                <h2>DG</h2>
               </a>
             </div>
             <!-- Text Logo -->
@@ -80,7 +80,7 @@
                 
                 <!-- Profile Titles -->
                 <a href="#">
-                  <h3 class="site-title">Alan Smith</h3>
+                  <h3 class="site-title">Dmitrii Gusev</h3>
                 </a>
                             
                 <h5 class="site-subtitle">Web Designer</h5>
